<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XMLScore</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Load Stave</string>
    <string name="title_activity_start">Start</string>
    <string name="select_text_main_key">Select the desired key</string>
    <string name="select_text_main_measure">Select the desired measure</string>
    <string name="button_main">Create stave</string>
    <string name="save">Save Stave</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="save_path">Path to save the Stave</string>
    <string name="default_path">Enter a path</string>
    <string name="languages">Language</string>
    <string name="app_name_es">XMLScore</string>
    <string name="title_section1_es">Seccion 1</string>
    <string name="title_section2_es">Seccion 2</string>
    <string name="title_section3_es">Seccion 3</string>
    <string name="hello_world_es">Hello world!</string>
    <string name="action_settings_es">Ajustes</string>
    <string name="title_activity_start_es">Iniciar</string>
    <string name="select_text_main_clef_es">Sellecione la clave deseada</string>
    <string name="select_text_main_measure_es">Seleccione el compas deseado</string>
    <string name="button_main_es">Crear Pentagrama</string>
    <string name="save_es">Guardar Pentagrama</string>
    <string name="settings_es">Ajustes</string>
    <string name="title_activity_settings_es">Ajustes</string>
    <string name="save_path_es">Ruta para guardar el Pentagrama</string>
    <string name="default_path_es">Introduzca ruta</string>
    <string name="languages_es">Idioma</string>
    <string name="stave">Stave</string>
    <string name="stave_es">Pentagrama</string>
    <string name="lines">Lines to be displayed</string>
    <string name="save_action">Save icon</string>
    <string name="error_add">No room for this note</string>
    <string name="major">Major Key</string>
    <string name="minor">Minor Key</string>
    <string name="content_whole">Whole note</string>
    <string name="content_half">Half note</string>
    <string name="content_quarter">Quarter note</string>
    <string name="content_eight">Eight note</string>
    <string name="content_sixteenth">Sixteenth note</string>
    <string name="line_cm">Cm</string>
    <string name="line_dm">Dm</string>
    <string name="line_em">Em</string>
    <string name="line_emb">EmB</string>
    <string name="line_fm">Fm</string>
    <string name="line_gm">Gm</string>
    <string name="line_gmb">GmB</string>
    <string name="line_am">Am</string>
    <string name="line_bm">Bm</string>
    <string name="line_bmb">BmB</string>
    <string name="line_cmm">CM</string>
    <string name="line_d_mm">DM</string>
    <string name="line_d_mmb">DMB</string>
    <string name="line_e_mm">EM</string>
    <string name="line_f_mm">FM</string>
    <string name="line_f_mmb">FMB</string>
    <string name="line_g_mm">GM</string>
    <string name="line_a_mm">AM</string>
    <string name="line_a_mmb">AMB</string>
    <string name="line_b_mm">BM</string>
    <string name="line_cmmm">CMM</string>
    <string name="added_notes">Note added</string>
    <string name="title_activity_load">Load stave</string>
    <string name="insert_name">Insert file name</string>

</resources>
