<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:layout_width="@dimen/picture_width"
        android:layout_height="@dimen/picture_height"
        android:id="@+id/whole"
        android:contentDescription="@string/content_whole"
        android:layout_alignTop="@+id/half"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


    <ImageView
        android:layout_width="@dimen/picture_width"
        android:layout_height="@dimen/picture_height"
        android:id="@+id/half"
        android:contentDescription="@string/content_half"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="113dp" />

    <ImageView
        android:layout_width="@dimen/picture_width"
        android:layout_height="@dimen/picture_height"
        android:id="@+id/eight"
        android:contentDescription="@string/content_eight"
        android:layout_marginStart="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="@dimen/picture_width"
        android:layout_height="@dimen/picture_height"
        android:id="@+id/quarter"
        android:contentDescription="@string/content_quarter"
        android:layout_marginStart="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/half"
        android:layout_alignStart="@+id/half" />

</RelativeLayout>