<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aeg.xmlscore.Start"
    android:clickable="false">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/main_title_text_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_text_main_key"
        android:id="@+id/textClef"
        android:layout_marginTop="80dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerKey"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_text_main_measure"
        android:id="@+id/textMeasure"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerMeasure"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp" />

    <Button
        android:layout_width="190dp"
        android:layout_height="80dp"
        android:text="@string/button_main"
        android:id="@+id/bNewStave"
        android:onClick="newStave"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
