<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:id="@+id/restsBag"
    android:background="#DBFFFB">


    <ImageView
        android:layout_width="@dimen/note_pic_dimen"
        android:layout_height="@dimen/note_pic_dimen"
        android:id="@+id/wholerest"
        android:contentDescription="@string/content_whole"
        android:src="@drawable/wholerest"

        android:layout_marginTop="10dp"
        android:layout_marginLeft="0dp"
        android:longClickable="true"
        android:visibility="visible"/>

    <ImageView
        android:layout_width="@dimen/note_pic_dimen"
        android:layout_height="@dimen/note_pic_dimen"
        android:id="@+id/halfrest"
        android:contentDescription="@string/content_half"
        android:src="@drawable/halfrest"

        android:layout_marginTop="10dp"
        android:layout_marginLeft="80dp"
        android:longClickable="true"
        android:visibility="visible" />

    <ImageView
        android:layout_width="@dimen/note_pic_dimen"
        android:layout_height="@dimen/note_pic_dimen"
        android:id="@+id/quarterrest"

        android:contentDescription="@string/content_quarter"
        android:src="@drawable/quarterrest"

        android:layout_marginTop="10dp"
        android:layout_marginLeft="160dp"
        android:longClickable="true"
        android:visibility="visible" />

    <ImageView
        android:layout_width="@dimen/note_pic_dimen"
        android:layout_height="@dimen/note_pic_dimen"
        android:id="@+id/eighthrest"

        android:contentDescription="@string/content_eight"
        android:src="@drawable/eighthrest"

        android:layout_marginTop="10dp"
        android:layout_marginLeft="240dp"
        android:longClickable="true"
        android:visibility="visible" />

    <ImageView
        android:layout_width="@dimen/note_pic_dimen"
        android:layout_height="@dimen/note_pic_dimen"
        android:id="@+id/sixteenthrest"
        android:contentDescription="@string/content_sixteenth"
        android:src="@drawable/sixteenthrest"

        android:layout_marginTop="120dp"
        android:layout_marginLeft="0dp"
        android:longClickable="true"
        android:visibility="visible" />

    <ImageView
        android:layout_width="@dimen/note_pic_dimen"
        android:layout_height="@dimen/note_pic_dimen"
        android:id="@+id/thirtytwothrest"
        android:contentDescription="@string/content_sixteenth"
        android:src="@drawable/thirtytwothrest"

        android:layout_marginTop="120dp"
        android:layout_marginLeft="80dp"
        android:longClickable="true"
        android:visibility="visible" />

    <ImageView
        android:layout_width="@dimen/note_pic_dimen"
        android:layout_height="@dimen/note_pic_dimen"
        android:id="@+id/sixtyfourthrest"
        android:contentDescription="@string/content_sixteenth"
        android:src="@drawable/sixtyfourthrest"

        android:layout_marginTop="120dp"
        android:layout_marginLeft="160dp"
        android:longClickable="true"
        android:visibility="visible" />

</RelativeLayout>